--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 
 * {
 
-
+    box-sizing: border-box;
     font-family: roboto;
 }
 
@@ -41,7 +41,7 @@ button.normal {
 
 header {
     display: flex;
-    background-image: url('../images/bg.jpg');
+    background-image: url('../images/gallery/bg.jpg');
     background-position: -6vw -13vh;
     background-size: cover;
     height: 100vh;
@@ -58,7 +58,7 @@ header nav {
     align-items: center;
     justify-content: space-between;
     z-index: 99999;
-
+    overflow: hidden;
 }
 
 .make-it-white {
@@ -225,156 +225,77 @@ header .center-text .join-btn:hover {
 }
 
 
-
+section{
+    width: 100%;
+    height: 100vh;
+}
 
 /* PORTFOLIO */
 
-#portfolio {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-}
 
-.main-div {
-    display: flex;
-    align-items: center;
-    height: 80%;
-    width: 90%;
-}
-
-.main-div>div {
-    margin: 0 7px;
-    height: 90%;
-}
-
-.container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    width: 50%;
+  
+  #portfolio {
+    
+  }
+  #portfolio .container-fluid{
     height: 100%;
-    grid-gap: 1rem;
-}
-
-.container img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 10px;
-    box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.6);
-}
-
-.image-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    width: auto;
-    grid-gap: 1rem;
-}
-
-.image-container img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
-
-
-/* CONTACT */
-
-#contact {
-    height: 100vh;
-    background-image: url('../images/contact-bg.jpg');
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    color: #fff;
-}
-
-#contact h1 {
-    align-self: flex-start;
-}
-
-#contact .contact-container {
-    height: 70vh;
-    width: 30%;
+  }
+  #portfolio .container-fluid,
+  #portfolio .container-fluid .row{
+ 
+    margin: 0 !important;
+    padding: 0 !important;
+  }
+  #portfolio .container-fluid .row{
+    height: 50%;
+  }
+  #portfolio .container-fluid .col-3{
+   padding: 0 !important;
+   overflow: hidden;
+   
+  }
+  #portfolio img{
+    transition: transform 0.5s ease;
+  }
+  #portfolio img:hover{
+    transform: scale(1.3);
+  }
+  .view-picture{
     position: absolute;
-    right: 10%;
-    top: 5vh;
-    /* (100vh - 70vh)/2 */
-    background-color: #fff;
-    border-radius: 35px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: #282828;
-    border: 1px solid white;
-}
-
-#contact .contact-container>div {
-    width: 70%;
-    margin: 20px 0;
-}
-
-#contact .contact-container>div>input,
-#contact .contact-container>div>textarea {
-    width: 100%;
-    box-sizing: border-box;
-    font-size: 16px;
-    font-weight: 600;
-    padding: 20px 20px;
-    border-radius: 7px;
-    border: none;
-    background-color: #343434;
-}
-
-
-#contact .contact-container button {
-    border: 1px solid black;
-    border-radius: 10px;
-}
-
-footer {
-    width: 100%;
-    background-color: #323232;
-}
-
-footer h1 {
-    text-align: center;
-    padding-bottom: 20px;
-}
-
-footer .media {
-    padding-top: 30px;
-    display: flex;
-    justify-content: center;
-}
-
-footer .media a {
-    text-decoration: none;
+    bottom: -100px;
+    left: 50%;
+    transform: translateX(-50%);
     color: #fff;
-    font-size: 19px;
-    font-weight: 600;
-    padding: 0 20px;
-}
+    border: 1px solid #fff;
+    padding: 10px 20px;
+    transition: all 0.5s ease;
+  }
+  .view-picture:hover{
+    cursor: pointer;
+  }
+  .view-picture-a{
+    bottom: 50px !important;
+  }
+/* CONTACT */
 
 /* ANIMATIONS */
 
 .fadeMid {
     animation: fadeMid ease 3.5s;
     animation-fill-mode: both;
+    
 }
 
 .fadeRight {
     animation: fadeInRight ease 1.5s;
     animation-fill-mode: both;
+   
 }
 
 .fadeLeft {
     animation: fadeInLeft ease 1.5s;
     animation-fill-mode: both;
+   
 }
 
 @keyframes fadeMid {
