--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ body {
     margin: 0;
 }
 
+section {
+    width: 100%;
+    height: 100vh;
+}
 
 /* global style*/
 
@@ -52,7 +56,7 @@ header {
 
 header nav {
     width: 100%;
-    position: absolute;
+    position: fixed;
     top: 25px;
     display: flex;
     align-items: center;
@@ -225,57 +229,50 @@ header .center-text .join-btn:hover {
 }
 
 
-section{
-    width: 100%;
-    height: 100vh;
-}
+
 
 /* PORTFOLIO */
 
 
-  
-  #portfolio {
-    
-  }
-  #portfolio .container-fluid{
-    height: 100%;
-  }
-  #portfolio .container-fluid,
-  #portfolio .container-fluid .row{
- 
+
+#gallery {
+   
+}
+
+#gallery .container-fluid {
+ height: 100%;
+ display: flex;
+  flex-direction: column;
+  flex-wrap: wrap; 
+}
+
+#gallery .container-fluid,
+#gallery .container-fluid .row {
+
     margin: 0 !important;
     padding: 0 !important;
-  }
-  #portfolio .container-fluid .row{
+}
+
+#gallery .container-fluid .row {
     height: 50%;
-  }
-  #portfolio .container-fluid .col-3{
-   padding: 0 !important;
-   overflow: hidden;
-   
-  }
-  #portfolio img{
+}
+
+.col-xl-3
+,.col-sm-6,
+.col-12 {
+    padding: 0 !important;
+    overflow: hidden;
+}
+
+#gallery img {
+    transform: scale(1.01);
     transition: transform 0.5s ease;
-  }
-  #portfolio img:hover{
+}
+
+#gallery img:hover {
     transform: scale(1.3);
-  }
-  .view-picture{
-    position: absolute;
-    bottom: -100px;
-    left: 50%;
-    transform: translateX(-50%);
-    color: #fff;
-    border: 1px solid #fff;
-    padding: 10px 20px;
-    transition: all 0.5s ease;
-  }
-  .view-picture:hover{
-    cursor: pointer;
-  }
-  .view-picture-a{
-    bottom: 50px !important;
-  }
+}
+
 /* CONTACT */
 
 /* ANIMATIONS */
@@ -283,19 +280,19 @@ section{
 .fadeMid {
     animation: fadeMid ease 3.5s;
     animation-fill-mode: both;
-    
+
 }
 
 .fadeRight {
     animation: fadeInRight ease 1.5s;
     animation-fill-mode: both;
-   
+
 }
 
 .fadeLeft {
     animation: fadeInLeft ease 1.5s;
     animation-fill-mode: both;
-   
+
 }
 
 @keyframes fadeMid {
@@ -339,78 +336,10 @@ section{
     font-size: 1.65rem;
 }
 
-@media screen and (max-width: 1260px) {
-
-    /* header nav .nav-links{
-       display:none;
-   }
-   #icon{
-       display:block;
-   } */
-    header nav {
-        flex-direction: column;
+@media screen and (max-width:992px) {
+    #gallery .container-fluid,
+    #gallery .container-fluid .row  {
+        height: auto;
     }
-
-    header {
-        justify-content: center;
-    }
-    #about .container .text .text-position p{
-        font-size: 20px;
-    }
-}
-
-@media screen and (max-width: 1400px) {
-    #about .container .image::before {
-        display: none;
-    }
-
-    #about .container .image,
-    #about .container .text {
-        width: 50%;
-    }
-}
-
-@media screen and (max-width: 680px) {
-    header nav .nav-links {
-        display: none;
-    }
-    header nav {
-        justify-content: space-between;
-        flex-direction: row;
-    }
-    #icon {
-        display: block;
-    }
-}
-@media screen and (max-width: 840px) {
-    header .center-text{
-        width: 100%;
-        margin:0 5px;
-    }
-    header .center-text h1{
-        font-size:45px ;
-    }
-    header .center-text p, header .center-text h4{
-        font-size:20px ;
-    }
-    #about .container{
-        flex-direction: column;
-        justify-content: space-around;
-        width: 90%;
-        height: 85%;
-    }
-    #about .container .text,#about .container .image { 
-        height: 50%;
-        width: 100%;
-    }
-    #about .container .text .text-position{
-        position: relative;
-        left: initial;
-    }
-    #about .container .text .text-position h1{
-        font-size: 30px;
-    }
-    #about .container .text .text-position p{
-        font-size: 18px;
-    }
+   
 }
